Set up isolated chapter report files

--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -544,20 +544,16 @@ According to \citeauthor{introtodl}, deep learning ``is the subfield of machine 
 
 \citeauthor{introtodl} go on to state that ``most machine learning algorithms as they exist now focus on function optimization, and the solutions yielded do not always explain the underlying trends within the data nor give the inferential power that artificial intelligence was trying to get close to'' (\cite[1]{introtodl}). However, machine learning methods have achieved success in many fields including natural language processing (\cite{nlpml}), computer vision (\cite{cvml}), and audio (\cite{audiodeeplearning}), indicating that data-driven approaches are useful, despite falling short of general artificial intelligence (\cite{generalai}).
 
-We also note that statistical signal processing techniques and machine and deep learning are compatible with one another and can be used together (\cite{mlsp1, mlsp2}). In fact, according to \citeauthor{mldspmix}, analytic knowledge and machine learning should both be considered in the study of acoustic signals:
-
-\begin{quote}
-	Whereas physical models are reliant on rules, which are updated by physical evidence (data), ML is purely data-driven. By augmenting ML methods with physical models to obtain hybrid models, a synergy of the strengths of physical intuition and data-driven insights can be obtained (\cite[3591]{mldspmix}).
-\end{quote}
+We also note that signal processing techniques and machine and deep learning are compatible with one another and can be used together (\cite{mlsp1, mlsp2}). According to \citeauthor{mldspmix}, signal processing and machine learning should both be considered in the study of acoustic signals, shown in figure \ref{fig:dspmlmix}.
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=0.5\textwidth]{./images-neural/dspmlmix.jpg}
-	\caption{Mixed analytic and data-driven approaches (\cite[3591]{mldspmix})}
+	\includegraphics[width=0.45\textwidth]{./images-neural/dspmlmix.jpg}
+	\caption{``Whereas physical models are reliant on rules, which are updated by physical evidence (data), ML is purely data-driven. By augmenting ML methods with physical models to obtain hybrid models, a synergy of the strengths of physical intuition and data-driven insights can be obtained (\cite[3591]{mldspmix})''}
 	\label{fig:dspmlmix}
 \end{figure}
 
-In machine learning,  the input data is typically split into a training set and a test set (\cite{introtoml}). The model makes predictions with its initial parameters using the training input. It measures how correct its prediction was by using a loss function to compare its predicted output to the training (or ground truth) output. Contemporary machine learning is dependent on the field of optimization (\cite{boyd2004convex, mlopt1, mlopt2}) for the loss function and parameter updates (\cite{sgd}). The performance of the network is measured by its ability to generalize on the test set, which was data not seen during training. There is sometimes a third validation set, which is also unseen during training and used to perform hyperparameter tuning (\cite{splitvaliddata}) which are the parameters of a machine learning model set by the user (\cite{introtodl}). The user tries to maximize the performance of the model on the validation set by modifying the hyperparameters.
+In machine learning, the input data is typically split into a training set and a test set (\cite{introtoml}). The model makes predictions with its initial parameters using the training input. It measures how correct its prediction was by using a loss function to compare its predicted output to the training (or ground truth) output. Contemporary machine learning is dependent on the field of optimization (\cite{boyd2004convex, mlopt1, mlopt2}) for the loss function and parameter updates (\cite{sgd}). The performance of the network is measured by its ability to generalize on the test set, which was data not seen during training. There is sometimes a third set called the validation set, which is also unseen during training and typically used to perform hyperparameter tuning (\cite{splitvaliddata}). Hyperparameters are the parameters of a machine learning model that are defined by the user (\cite{introtodl}). The user tries to maximize the performance of the model on the validation set by modifying the hyperparameters.
 
 \textcite{audiodeeplearning} describe contemporary deep learning architectures that are used for audio applications. They state that models from the field of computer vision, originally designed for 2D images where pixels are related spatially, may not exactly fit audio waveforms where amplitude values are related temporally. However, convolutional neural networks, recurrent neural networks, and sequence-to-sequence models are three popular types of network architecture that have been adapted with varying levels of success to the audio and music domains (\cite{audiodeeplearning}).
 
@@ -777,7 +773,7 @@ All of the code for this thesis were stored in git repositories to keep track of
 
 \citeauthor{floss} state that ``free and open source software (FOSS) is any computer program released under a licence that grants users rights to run the program for any purpose, to study it, to modify it, and to redistribute it in original or modified form'' (\cite[1]{floss}). Free and open-source software is a merging of two distinct ideas: free software\footnote{\url{https://www.fsf.org/}} and open-source software.\footnote{\url{https://opensource.org/}} While these have nuanced differences when it comes to commercial licensing, code visibility, and availability, in simplistic terms FOSS implies code that is free and open for users to read and modify. Releasing code as open-source is becoming more popular in academia, with initiatives like Papers With Code\footnote{\url{https://paperswithcode.com/}} and the Journal of Open Source Software.\footnote{\url{https://joss.theoj.org/}} According to \textcite{floss}, FOSS software is a natural complement to academic publications, given concerns with reproducibility of results.
 
-\citeauthor{gitbook} describe GitHub\footnote{\url{https://github.com/}} as ``the single largest host for Git repositories, and [... a] central point of collaboration for millions of developers and projects'' (\cite[131]{gitbook}). GitHub contains tools for working with git repositories, including social elements for creating personal profiles or organizations. Open-source projects can be made public on GitHub such that anybody can read and download the source code. For a project hosted on GitHub, there is a file browser built into the website which allows one to view the code and change history of a project. In this thesis, the GitHub code browser will be linked wherever appropriate to show code written for the thesis or code from third-party projects, such that the reader can view the true source code that is being described. An example of the GitHub code browser showing a file from the PyTorch project's git repository\footnote{\url{https://github.com/pytorch/pytorch}} is shown in figure \ref{fig:githubpytorch}.
+\citeauthor{gitbook} describe GitHub\footnote{\url{https://github.com/}} as ``the single largest host for Git repositories, and [... a] central point of collaboration for millions of developers and projects'' (\cite[131]{gitbook}). GitHub contains tools for working with git repositories, including social elements for personal profiles or organizations. Open-source projects can be made public on GitHub such that anybody can read and download the source code. For a project hosted on GitHub, there is a file browser built into the website which allows one to view the code and change history of a project. In this thesis, the GitHub code browser will be linked wherever appropriate. An example of the GitHub code browser showing a file from the PyTorch project's git repository\footnote{\url{https://github.com/pytorch/pytorch}} is shown in figure \ref{fig:githubpytorch}.
 
 \begin{figure}[ht]
 	\centering
